@@ -276,6 +276,9 @@ create_cfg(cfg_t &cfg, con_t &con, ebbIndex *ebbi)
   std::map<int, unsigned int> key_to_index;
   std::map<std::pair<int, reg_t>, var_t> sym_to_index;
 
+  if(currFunc)
+    currFunc->div_flag_safe = 1;
+
   start_ic = iCodeLabelOptimize(iCodeFromeBBlock (ebbs, ebbi->count));
   {
     int i;
@@ -283,6 +286,11 @@ create_cfg(cfg_t &cfg, con_t &con, ebbIndex *ebbi)
     wassertl (!boost::num_vertices(cfg), "CFG non-empty before creation.");
     for (ic = start_ic, i = 0, j = 0; ic; ic = ic->next, i++)
       {
+        if (currFunc)
+          currFunc->div_flag_safe &= !(ic->op == INLINEASM || ic->op == '/' || ic->op == '%' || ic->op == PCALL ||
+            ic->op == CALL && (IS_OP_LITERAL (IC_LEFT (ic)) || !OP_SYMBOL(IC_LEFT (ic))->div_flag_safe) ||
+            ic->op == RIGHT_OP && IS_OP_LITERAL (IC_RIGHT (ic))); // Right shift might be implemented using division.
+
 #ifdef DEBUG_SEGV
         default_constructor_of_cfg_node_called = false;
 #endif
